# qtAndroidApi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  skills-lock.json
.scratch/prd-testing-retry-icons/: prd.md
android/: AndroidManifest.xml  build.gradle
android/res/values/: libs.xml
android/src/org/qtproject/aichat/: KeyStoreHelper.java
qml/: Theme.qml  main.qml
qml/components/: ChatInputBar.qml  ConversationListItem.qml  MarkdownLabel.qml  MessageBubble.qml  ProviderChipSelector.qml  StreamingMessageBubble.qml  ThinkingIndicator.qml
qml/delegates/: ConversationDelegate.qml  MessageDelegate.qml
qml/dialogs/: ApiKeyDialog.qml  DeleteConfirmDialog.qml  NewConversationDialog.qml
qml/pages/: ApiKeyManagementPage.qml  ChatPage.qml  ConversationsPage.qml  SettingsPage.qml
resources/: resources.qrc
src/: ThemeProvider.cpp  ThemeProvider.h  main.cpp
src/android/: AndroidKeyStore.cpp  AndroidKeyStore.h  DesktopKeyStore.cpp
src/managers/: ChatManager.cpp  ChatManager.h  DatabaseManager.cpp  DatabaseManager.h  SettingsManager.cpp  SettingsManager.h
src/models/: ConversationData.h  ConversationListModel.cpp  ConversationListModel.h  MessageData.h  MessageListModel.cpp  MessageListModel.h
src/providers/: AiProviderBase.cpp  AiProviderBase.h  AnthropicProvider.cpp  AnthropicProvider.h  DeepSeekProvider.cpp  DeepSeekProvider.h  GeminiProvider.cpp  GeminiProvider.h  OpenAiProvider.cpp  OpenAiProvider.h  ProviderFactory.cpp  ProviderFactory.h
